cabal-version:       2.4
name:                haskii
version:             0.1.0.0
license:             BSD-3-Clause
author:              sohzm
maintainer:          sohambharambe9@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable haskii
  main-is:             Main.hs
  build-depends:       base >=4.13 && <5
                     , bytestring
                     , JuicyPixels
                     , optparse-applicative
                     , terminal-size
  default-language:    Haskell2010
